--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "twitter-js",
   "version": "1.0.0",
-  "description": "",
+  "description": "twitter-esque app",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.14.0"
+  }
 }
