--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "twitter-js",
   "version": "1.0.0",
-
   "description": "a cool tweet app",
   "main": "index.js",
   "scripts": {
@@ -11,8 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.14.0"
-
+    "express": "^4.14.0",
+    "nunjucks": "^3.0.0",
+    "volleyball": "^1.4.1"
   },
   "devDependencies": {
     "nodemon": "^1.11.0"
